--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -19,6 +19,7 @@
   display: flex;
   justify-content: center;
   column-gap: 2.5rem;
+  margin-top: 1rem;
 }
 .skills__group {
   display: grid;
@@ -43,11 +44,27 @@
 }
 
 /* BREAKPOINTS */
+
 @media screen and (max-width: 992px) {
+  .skills__container {
+    grid-template-columns: max-content;
+    row-gap: 2rem;
+  }
 }
-@media screen and (max-width: 768px) {
-}
+
 @media screen and (max-width: 576px) {
+  .skills__container {
+    grid-template-columns: 1fr;
+  }
+  .skills__content {
+    padding: 1.5rem;
+  }
 }
 @media screen and (max-width: 350px) {
+  .skills__box {
+    column-gap: 1.5rem;
+  }
+  .skills__name {
+    font-size: var(--small-font-size);
+  }
 }
