--- a/src/components/testimonials/testimonial.css
+++ b/src/components/testimonials/testimonial.css
@@ -6,4 +6,30 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 1.5rem 2rem;
   border-radius: 1.5rem;
+  margin-bottom: var(--mb-3);
+}
+.testiomonial__img {
+  width: 60px;
+  border-radius: 3rem;
+  margin-bottom: var(--mb-1);
+}
+.testimonial__name {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+  margin-bottom: var(--mb-0-25);
+}
+.testiomonial__description {
+  font-size: var(--small-font-size);
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--title-color) !important;
+}
+/* BREAKPOINTS */
+@media screen and (max-width: 992px) {
+  .testimonial__container {
+    width: initial;
+  }
+  .testimonial__card {
+    padding: 1.25rem 1.5re;
+  }
 }
