--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -42,6 +42,10 @@
 .nav__link:hover {
   color: var(--title-color-dark);
 }
+
+.scroll-header {
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
 /* BREAKPOINTS */
 @media screen and (max-width: 768px) {
   .header {
